# bounty-api

./: .gitignore  AI_SEO_PLAYBOOK.md  BUILD_LOG.md  COMPETITIVE_POSITIONING.md  Dockerfile  MCP_DIRECTORY_SUBMISSIONS.md  PRODUCTHUNT_DRAFT.md  README.md  REDDIT_POSTS.md  SHOW_HN_POST.md  SOCIAL_SCRAPING_STRATEGY.md  STATE.md  STRATEGIC_ROADMAP.md  agentcash_discovery.py  apify_x402.html  app.py  mcp-config.json  pages.py  payment.py  pyproject.toml  requirements.txt  test_api.py  test_payment.py
apis/: __init__.py  address_intel.py  affordability.py  app_reviews.py  company_intel.py  compound.py  currency.py  hdb_lease_decay.py  hdb_quota.py  hdb_resale.py  job_search.py  mortgage.py  news_search.py  postal_district.py  property_analysis.py  property_decisions.py  property_pitch.py  property_rank.py  rental_yield.py  salary_benchmark.py  school_proximity.py  sg_calculators.py  social_trends.py  ura_data.py
apis/data/: sg_schools.json
mcp-server/: README.md  REGISTRY_SUBMISSION_WINDOWS.md  package-lock.json  package.json  server.json  test-mcp.js  test_mcp.sh
mcp-server/src/: index.ts
public/: llms.txt  robots.txt  site.webmanifest
social_scraper/: __init__.py  audit.py  instagram.py  probe_instagram.py  probe_tiktok.py
