[project]
name = "asia-data-api"
version = "1.0.0"
description = "Asia specialist data APIs for AI agents (x402 micropayments)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
